tests/ui/lifetimes/copy_modulo_regions.stderr
error: lifetime may not live long enough
  --> $DIR/copy_modulo_regions.rs:12:5
   |
LL | fn foo<'a>() -> [Foo<'a>; 100] {
   |        -- lifetime `'a` defined here
LL |     [mk_foo::<'a>(); 100]
   |     ^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     returning this value requires that `'a` must outlive `'static`
   |     requirement occurs due to copying this value
   |
   = note: requirement occurs because of the type `Foo<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `Foo<'a>` is invariant over the parameter `'a`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: aborting due to 1 previous error

